--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@mui/lab": "^5.0.0-alpha.168",
     "@mui/material": "^5.15.13",
     "axios": "^1.6.8",
+    "chart.js": "^4.4.2",
     "framer-motion": "^11.0.14",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3"
   },
